--- a/Upload_git.ipynb
+++ b/Upload_git.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,25 @@
    ],
    "source": [
     "print(\"Jakkamma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add():\n",
+    "    return 5+5\n",
+    "print(add())"
    ]
   }
  ],
